--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.8.4
   google_fonts: ^5.1.0
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
