--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   google_fonts: ^5.1.0
   path_provider: ^2.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
